testsuite/bsc.names/portRenaming/invalidAttrs/ready/InvalidName.bsv

interface Ifc;
 (* ready = "new&name" *)
 method Bool check ();
endinterface

(* synthesize *) 
module mkInvalidName (Ifc);
endmodule
